fix(web-components): added css to ic-navigation-group to prevent its label text wrapping
added nowrap to button in ic-navigation-group to prevent its text wrapping when included in
ic-horizontal-scroll

--- a/packages/web-components/src/components/ic-navigation-group/ic-navigation-group.css
+++ b/packages/web-components/src/components/ic-navigation-group/ic-navigation-group.css
@@ -25,6 +25,7 @@
   position: relative;
   background: none;
   border: none;
+  white-space: nowrap;
 }
 
 :host(.in-side-menu) .navigation-group {
